--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Old Toolbox</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
     <h1>Olá, mundo!</h1>
     <hr>
-    <p>Primeiro parágrafo de testes para o portfolio de Segurança Cibernética, Programação e Redes.</p>    
+    <p>Primeiro parágrafo de testes para o portfolio de Segurança Cibernética, Programação e Redes.</p>
+    
 </body>
 </html>
