Inserção de novos parágrafos como esqueleto de onde ficarão os links das ferramentas, com um breve texto explicativo do que a ferramenta faz. Até o momento, está com "lorem ipsum".

--- a/index.html
+++ b/index.html
@@ -10,7 +10,23 @@
 <body>
     <h1>Old Toolbox</h1>
     <hr>
-    <p>Free & Open Source cybersecurity tools for daily use.</p>
-    <p>Follow me on social media:</p>
+    <h2>Free & Open Source cybersecurity tools for daily use.</h2>
+    <hr>
+    <h3>Ferramenta 1</h3>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus nulla ducimus quia dolorem ipsa laboriosam ratione exercitationem eaque quasi modi officiis veniam voluptatem magni obcaecati cum unde, veritatis at perspiciatis.</p>
+    <hr>
+    <h3>Ferramenta 2</h3>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus nulla ducimus quia dolorem ipsa laboriosam ratione exercitationem eaque quasi modi officiis veniam voluptatem magni obcaecati cum unde, veritatis at perspiciatis.</p>
+    <hr>
+    <h3>Ferramenta 3</h3>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus nulla ducimus quia dolorem ipsa laboriosam ratione exercitationem eaque quasi modi officiis veniam voluptatem magni obcaecati cum unde, veritatis at perspiciatis.</p>
+    <hr>
+    <h3>Ferramenta 4</h3>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus nulla ducimus quia dolorem ipsa laboriosam ratione exercitationem eaque quasi modi officiis veniam voluptatem magni obcaecati cum unde, veritatis at perspiciatis.</p>
+    <hr>
+    <h3>Ferramenta 5</h3>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus nulla ducimus quia dolorem ipsa laboriosam ratione exercitationem eaque quasi modi officiis veniam voluptatem magni obcaecati cum unde, veritatis at perspiciatis.</p>
+    <hr>
+    <h3>Follow me on social media:</h3>
 </body>
 </html>
