--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Old Toolbox</h1>
     <hr>
-    <h2>Free & Open Source cybersecurity tools for daily use.</h2>
+    <h2>Free & Open Source cybersecurity tools for daily use</h2>
     <hr>
     <h3>Ferramenta 1</h3>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus nulla ducimus quia dolorem ipsa laboriosam ratione exercitationem eaque quasi modi officiis veniam voluptatem magni obcaecati cum unde, veritatis at perspiciatis.</p>
@@ -28,5 +28,11 @@
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus nulla ducimus quia dolorem ipsa laboriosam ratione exercitationem eaque quasi modi officiis veniam voluptatem magni obcaecati cum unde, veritatis at perspiciatis.</p>
     <hr>
     <h3>Follow me on social media:</h3>
+    <ul>
+        <li><a href="https://www.instagram.com/aureliosccpovoa/" target="_blank" rel="external">Instagram</a></li>
+        <li><a href="https://x.com/aureliosccpovoa/" target="_blank" rel="external">X</a></li>
+        <li><a href="https://github.com/aureliosccpovoa/" target="_blank" rel="external">GitHub</a></li>
+        <li><a href="https://www.youtube.com/@aureliosccpovoa">YouTube</a></li>
+    </ul>
 </body>
 </html>
