Criação da pasta de imagens e inserção de imagens como links para as redes sociais. Alteração do local do favicon para a pasta de imagens.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Old Toolbox</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href=images/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <h1>Old Toolbox</h1>
@@ -29,10 +29,21 @@
     <hr>
     <h3>Follow me on social media:</h3>
     <ul>
-        <li><a href="https://www.instagram.com/aureliosccpovoa/" target="_blank" rel="external">Instagram</a></li>
-        <li><a href="https://x.com/aureliosccpovoa/" target="_blank" rel="external">X</a></li>
-        <li><a href="https://github.com/aureliosccpovoa/" target="_blank" rel="external">GitHub</a></li>
-        <li><a href="https://www.youtube.com/@aureliosccpovoa">YouTube</a></li>
+        <li><a href="https://github.com/aureliosccpovoa/" target="_blank" rel="external">
+            <img src="images/icone-github.png" alt="Link para GitHub do autor do site">
+        </a></li>
+        <li><a href="https://www.linkedin.com/in/aureliosccpovoa/" target="_blank" rel="external">
+            <img src="images/icone-linkedin.png" alt="Link para LinkedIn do autor do site">
+        </a></li>
+        <li><a href="https://www.instagram.com/aureliosccpovoa/" target="_blank" rel="external">
+            <img src="images/icone-instagram.png" alt="Link para Instagram do autor do site">
+        </a></li>
+        <li><a href="https://x.com/aureliosccpovoa/" target="_blank" rel="external">
+            <img src="images/twitter-x-seeklogo.png" alt="Link para X do autor do site">
+        </a></li>
+        <li><a href="https://www.youtube.com/@aureliosccpovoa">
+            <img src="images/icone-youtube.png" alt="Link para YouTube do autor do site">
+        </a></li>
     </ul>
 </body>
 </html>
