--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <main> 
+    <header> 
         <h1>Old Toolbox</h1>
         <hr>
         <h2>Free & Open Source cybersecurity tools for daily use</h2>
         <hr>
+    </header>
+    <main>
         <h3>Ferramenta 1</h3>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus nulla ducimus quia dolorem ipsa laboriosam ratione exercitationem eaque quasi modi officiis veniam voluptatem magni obcaecati cum unde, veritatis at perspiciatis.</p>
         <hr>
@@ -28,24 +30,25 @@
         <h3>Ferramenta 5</h3>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus nulla ducimus quia dolorem ipsa laboriosam ratione exercitationem eaque quasi modi officiis veniam voluptatem magni obcaecati cum unde, veritatis at perspiciatis.</p>
         <hr>
-        <h3>Follow me on social media:</h3>
-        <ul>
-            <li><a href="https://github.com/aureliosccpovoa/" target="_blank" rel="external">
-                <img src="images/icone-github.png" alt="Link para GitHub do autor do site">
-            </a></li>
-            <li><a href="https://www.linkedin.com/in/aureliosccpovoa/" target="_blank" rel="external">
-                <img src="images/icone-linkedin.png" alt="Link para LinkedIn do autor do site">
-            </a></li>
-            <li><a href="https://www.instagram.com/aureliosccpovoa/" target="_blank" rel="external">
-                <img src="images/icone-instagram.png" alt="Link para Instagram do autor do site">
-            </a></li>
-            <li><a href="https://x.com/aureliosccpovoa/" target="_blank" rel="external">
-                <img src="images/twitter-x-seeklogo.png" alt="Link para X do autor do site">
-            </a></li>
-            <li><a href="https://www.youtube.com/@aureliosccpovoa">
-                <img src="images/icone-youtube.png" alt="Link para YouTube do autor do site">
-            </a></li>
-        </ul>
     </main>
+    <footer>
+        <div id="social">
+            <a href="https://github.com/aureliosccpovoa/" target="_blank" rel="external">
+                <img src="images/icone-github.png" alt="Link para GitHub do autor do site">
+            </a>
+            <a href="https://www.linkedin.com/in/aureliosccpovoa/" target="_blank" rel="external">
+                <img src="images/icone-linkedin.png" alt="Link para LinkedIn do autor do site">
+            </a>
+            <a href="https://www.instagram.com/aureliosccpovoa/" target="_blank" rel="external">
+                <img src="images/icone-instagram.png" alt="Link para Instagram do autor do site">
+            </a>
+            <a href="https://x.com/aureliosccpovoa/" target="_blank" rel="external">
+                <img src="images/twitter-x-seeklogo.png" alt="Link para X do autor do site">
+            </a>
+            <a href="https://www.youtube.com/@aureliosccpovoa">
+                <img src="images/icone-youtube.png" alt="Link para YouTube do autor do site">
+            </a>
+        </div>
+    </footer>   
 </body>
 </html>
