Alterações no layout do site, teste de combinações da paleta de cores e reorganização geral do código.

--- a/index.html
+++ b/index.html
@@ -16,39 +16,49 @@
     </header>
     <main>
         <h3>Ferramenta 1</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus nulla ducimus quia dolorem ipsa laboriosam ratione exercitationem eaque quasi modi officiis veniam voluptatem magni obcaecati cum unde, veritatis at perspiciatis.</p>
+        <p>Previsão de lançamento: 30 de novembro de 2025.</p>
         <hr>
         <h3>Ferramenta 2</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus nulla ducimus quia dolorem ipsa laboriosam ratione exercitationem eaque quasi modi officiis veniam voluptatem magni obcaecati cum unde, veritatis at perspiciatis.</p>
+        <p>Previsão de lançamento: 31 de dezembro de 2025.</p>
         <hr>
         <h3>Ferramenta 3</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus nulla ducimus quia dolorem ipsa laboriosam ratione exercitationem eaque quasi modi officiis veniam voluptatem magni obcaecati cum unde, veritatis at perspiciatis.</p>
+        <p>Previsão de lançamento: 31 de janeiro de 2026.</p>
         <hr>
         <h3>Ferramenta 4</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus nulla ducimus quia dolorem ipsa laboriosam ratione exercitationem eaque quasi modi officiis veniam voluptatem magni obcaecati cum unde, veritatis at perspiciatis.</p>
+        <p>Previsão de lançamento: 28 de fevereiro de 2026.</p>
         <hr>
         <h3>Ferramenta 5</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus nulla ducimus quia dolorem ipsa laboriosam ratione exercitationem eaque quasi modi officiis veniam voluptatem magni obcaecati cum unde, veritatis at perspiciatis.</p>
+        <p>Previsão de lançamento: 30 de março de 2026.</p>
         <hr>
     </main>
     <footer>
-        <div id="social">
+        <nav id="social">
             <a href="https://github.com/aureliosccpovoa/" target="_blank" rel="external">
-                <img src="images/icone-github.png" alt="Link para GitHub do autor do site">
+                <abbr title="GitHub">
+                    <img src="images/icone-github.png" alt="Link para GitHub do autor do site">
+                </abbr>
             </a>
             <a href="https://www.linkedin.com/in/aureliosccpovoa/" target="_blank" rel="external">
-                <img src="images/icone-linkedin.png" alt="Link para LinkedIn do autor do site">
+                <abbr title="LinkedIn">
+                    <img src="images/icone-linkedin.png" alt="Link para LinkedIn do autor do site">
+                </abbr>
             </a>
             <a href="https://www.instagram.com/aureliosccpovoa/" target="_blank" rel="external">
-                <img src="images/icone-instagram.png" alt="Link para Instagram do autor do site">
+                <abbr title="Instagram">
+                    <img src="images/icone-instagram.png" alt="Link para Instagram do autor do site">
+                </abbr>
             </a>
             <a href="https://x.com/aureliosccpovoa/" target="_blank" rel="external">
-                <img src="images/twitter-x-seeklogo.png" alt="Link para X do autor do site">
+                <abbr title="X">   
+                    <img src="images/twitter-x-seeklogo.png" alt="Link para X do autor do site">
+                </abbr>
             </a>
             <a href="https://www.youtube.com/@aureliosccpovoa">
-                <img src="images/icone-youtube.png" alt="Link para YouTube do autor do site">
+                <abbr title="YouTube">
+                    <img src="images/icone-youtube.png" alt="Link para YouTube do autor do site">
+                </abbr>
             </a>
-        </div>
+        </nav>
     </footer>   
 </body>
 </html>
