--- a/index.html
+++ b/index.html
@@ -15,21 +15,48 @@
         <hr>
     </header>
     <main>
-        <h3>Ferramenta 1</h3>
-        <p>Previsão de lançamento: 30 de novembro de 2025.</p>
-        <hr>
-        <h3>Ferramenta 2</h3>
-        <p>Previsão de lançamento: 31 de dezembro de 2025.</p>
-        <hr>
-        <h3>Ferramenta 3</h3>
-        <p>Previsão de lançamento: 31 de janeiro de 2026.</p>
-        <hr>
-        <h3>Ferramenta 4</h3>
-        <p>Previsão de lançamento: 28 de fevereiro de 2026.</p>
-        <hr>
-        <h3>Ferramenta 5</h3>
-        <p>Previsão de lançamento: 30 de março de 2026.</p>
-        <hr>
+        <section>
+            <article>
+                <h3>Ferramenta 1</h3>
+                <p>Previsão de lançamento: 30 de novembro de 2025.</p>
+            </article>
+            <article>
+                <h3>Ferramenta 2</h3>
+                <p>Previsão de lançamento: 31 de dezembro de 2025.</p>
+            </article>
+            <article>
+                <h3>Ferramenta 3</h3>
+                <p>Previsão de lançamento: 31 de janeiro de 2026.</p>
+            </article>
+            <article>
+                <h3>Ferramenta 4</h3>
+                <p>Previsão de lançamento: 28 de fevereiro de 2026.</p>
+            </article>           
+            <article>
+                <h3>Ferramenta 5</h3>
+                <p>Previsão de lançamento: 31 de março de 2026.</p>
+            </article>
+            <article>
+                <h3>Ferramenta 6</h3>
+                <p>Previsão de lançamento: 30 de abril de 2026.</p>
+            </article>
+            <article>
+                <h3>Ferramenta 7</h3>
+                <p>Previsão de lançamento: 31 de maio de 2026.</p>
+            </article>
+            <article>
+                <h3>Ferramenta 8</h3>
+                <p>Previsão de lançamento: 30 de junho de 2026.</p>
+            </article>
+            <article>
+                <h3>Ferramenta 9</h3>
+                <p>Previsão de lançamento: 31 de julho de 2026.</p>
+            </article>           
+            <article>
+                <h3>Ferramenta 10</h3>
+                <p>Previsão de lançamento: 31 de agosto de 2026.</p>
+            </article>
+        </section>
     </main>
     <footer>
         <nav id="social">
