--- a/index.html
+++ b/index.html
@@ -5,14 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Old Toolbox</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/favicon.svg" type="image/svg+xml">
 </head>
 <body>
     <header> 
         <h1>Old Toolbox</h1>
-        <hr>
         <h2>Free & Open Source cybersecurity tools for daily use</h2>
-        <hr>
     </header>
     <main>
         <section>
@@ -62,27 +60,27 @@
         <nav id="social">
             <a href="https://github.com/aureliosccpovoa/" target="_blank" rel="external">
                 <abbr title="GitHub">
-                    <img src="images/icone-github.png" alt="Link para GitHub do autor do site">
+                    <img src="images/github-icon.svg" alt="Link para GitHub do autor do site">
                 </abbr>
             </a>
             <a href="https://www.linkedin.com/in/aureliosccpovoa/" target="_blank" rel="external">
                 <abbr title="LinkedIn">
-                    <img src="images/icone-linkedin.png" alt="Link para LinkedIn do autor do site">
+                    <img src="images/linkedin-icon.svg" alt="Link para LinkedIn do autor do site">
                 </abbr>
             </a>
             <a href="https://www.instagram.com/aureliosccpovoa/" target="_blank" rel="external">
                 <abbr title="Instagram">
-                    <img src="images/icone-instagram.png" alt="Link para Instagram do autor do site">
+                    <img src="images/instagram-icon.svg" alt="Link para Instagram do autor do site">
                 </abbr>
             </a>
             <a href="https://x.com/aureliosccpovoa/" target="_blank" rel="external">
                 <abbr title="X">   
-                    <img src="images/twitter-x-seeklogo.png" alt="Link para X do autor do site">
+                    <img src="images/twitter-x-icon.svg" alt="Link para X do autor do site">
                 </abbr>
             </a>
             <a href="https://www.youtube.com/@aureliosccpovoa">
                 <abbr title="YouTube">
-                    <img src="images/icone-youtube.png" alt="Link para YouTube do autor do site">
+                    <img src="images/youtube-icon.svg" alt="Link para YouTube do autor do site">
                 </abbr>
             </a>
         </nav>
