Alteração de ícone
1. Alteração do ícone do site para facilitar a implementação do código CSS no switch de alteração do modo de cores.

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <header> 
         <h1>Old Toolbox</h1>
         <h2>Ferramentas gratuitas e de código aberto para uso cotidiano</h2>
-        <!-- Botão de alternância de cores -->
+        <!-- Botão de alternância de modo -->
         <div class="theme-switch-wrapper">
             <label class="theme-switch" for="checkbox">
                 <input type="checkbox" id="checkbox">
                 <div class="slider round"></div>
             </label>
         </div>
-        <!-- Botão de alternância de cores -->
+        <!-- Botão de alternância de modo -->
     </header>
     
     <main>
