Correção do favicon e nova tentativa de alteração no modo escuro
1. Adição de svg separado para o favicon;
2. Tentativa de alterar a cor do ícone do slider de modos, sem sucesso.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Portfólio de projetos open source  de Aurélio S. C. C. Póvoa">
     <title>Old Toolbox</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="images/toolbox-solid-full.svg" type="image/svg+xml">
+    <link rel="icon" href="images/favicon.svg" type="image/svg+xml">
     <script src="https://kit.fontawesome.com/52ba8f8e7e.js" crossorigin="anonymous"></script>
 </head>
 <body>
